# Inquiry-Spring

./: .gitignore  API_DOCUMENTATION.md  API_STRUCTURE.md  API_SUMMARY.md  FRONTEND_API_GUIDE.md  FRONTEND_CLEANUP_SUMMARY.md  README.md  api_views.py  db.sqlite3  manage.py  pyproject.toml  test_ai_service.py  test_all_apis.py  test_new_api_structure.py
InquirySpring/: asgi.py  settings.py  urls.py  wsgi.py
apps/ai_services/: apps.py  llm_client.py  models.py  prompt_manager.py  rag_engine.py
apps/chat/: apps.py  models.py  serializers.py  urls.py  views.py
apps/documents/: models.py  serializers.py  urls.py  views.py
apps/quiz/: apps.py  models.py  serializers.py  urls.py  views.py
backend/: .env  .env.example  BACKEND_README.md  init_backend.py  manage.py  requirements.txt
backend/inquiryspring_backend/: __init__.py  ai_service_wrapper.py  db.sqlite3  middleware.py  serializers.py  settings.py  urls.py  utils.py  wsgi.py
backend/inquiryspring_backend/ai_services/: __init__.py  apps.py  llm_client.py  models.py  rag_engine.py
backend/inquiryspring_backend/chat/: admin.py  apps.py  models.py  urls.py  views.py
backend/inquiryspring_backend/documents/: admin.py  apps.py  document_processor.py  models.py  urls.py  (+1 more)
djangoTest/: README.md  manage.py
djangoTest/djangoTest/: asgi.py  settings.py  urls.py  wsgi.py
djangoTest/myApp/: views.py
docs/: requirements.md  schedule.md  system_design.md
inquiryspring-front/: README.md  package-lock.json  package.json  vue.config.js
inquiryspring-front/src/: App.vue  main.js
vector_store/1/: chroma.sqlite3
(+33 files in other folders)
