[project]
name = "InquirySpring"
version = "0.1.0"
description = "Intelligent Inquiry System"
authors = [
    { name="Ao-chii", email="2543327978@qq.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=4.0",
    "djangorestframework>=3.14.0",
    "Pillow>=9.0.0",
    "LangChain>=0.2.1",
    "LangChain-Community>=0.2.1",
    "LangChain-HuggingFace>=0.2.1",
    "LangChain-OpenAI>=0.2.1",
    "LangChain-Replicate>=0.2.1",
    "LangChain-Google>=0.2.1",
    "LangChain-Anthropic>=0.2.1",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "python-multipart>=0.0.6",
]

[project.urls]
"Home" = "https://github.com/Ao-chii/Inquiry-Spring"
